Fix path of preview image which comes upon sharing on social media

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bloomalyzer: Witness the Planet's Pulse">
     <meta property="og:description" content="An interactive web application to visualize and scientifically measure the 2023 California Superbloom using NASA partner satellite data.">
-    <meta property="og:image" content="https://bloomalyzer.vercel.app/hero_image.jpg">
+    <meta property="og:image" content="https://bloomalyzer.vercel.app/assets/hero_image-DISKCJM9.jpg">
     <meta property="og:url" content="https://bloomalyzer.vercel.app/">
 
     <!-- Twitter -->
@@ -20,7 +20,7 @@
     <meta property="twitter:url" content="https://bloomalyzer.vercel.app/">
     <meta property="twitter:title" content="Bloomalyzer: Witness the Planet's Pulse">
     <meta property="twitter:description" content="An interactive web application to visualize and scientifically measure the 2023 California Superbloom using NASA partner satellite data.">
-    <meta property="twitter:image" content="assets/hero_image.jpg">
+    <meta property="twitter:image" content="assets/hero_image-DISKCJM9.jpg">
 
     <!-- Other Meta -->
     <link rel="canonical" href="https://bloomalyzer.vercel.app/">
