--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/favicon.ico" />
-    <title>Bloomalyzer: Witness the Planet's Pulse</title>
-    <meta name="description" content="An interactive web application to visualize and scientifically measure the 2023 California Superbloom using NASA partner satellite data.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="src/assets/favicon.ico">
+    <title>Bloomalyzer: Visualize California Superbloom with NASA Data</title>
+    <meta name="description" content="Explore the 2023 California Superbloom through an interactive web application using NASA satellite data">
     <meta name="author" content="Tarun, Abhinash, Vinay, Ayesha, Priyanka, Sen">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bloomalyzer: Witness the Planet's Pulse">
-    <meta property="og:description" content="An interactive web application to visualize and scientifically measure the 2023 California Superbloom using NASA partner satellite data.">
+    <meta property="og:description" content="An interactive web application to visualize and scientifically measure the 2023 California Superbloom using NASA partner satellite data">
     <meta property="og:image" content="https://bloomalyzer.vercel.app/assets/hero_image-DISKCJM9.jpg">
     <meta property="og:url" content="https://bloomalyzer.vercel.app/">
 
@@ -19,8 +19,19 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://bloomalyzer.vercel.app/">
     <meta property="twitter:title" content="Bloomalyzer: Witness the Planet's Pulse">
-    <meta property="twitter:description" content="An interactive web application to visualize and scientifically measure the 2023 California Superbloom using NASA partner satellite data.">
+    <meta property="twitter:description" content="An interactive web application to visualize and scientifically measure the 2023 California Superbloom using NASA partner satellite data">
     <meta property="twitter:image" content="assets/hero_image-DISKCJM9.jpg">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Bloomalyzer",
+        "url": "https://bloomalyzer.vercel.app/",
+        "description": "An interactive web application to visualize and scientifically measure the 2023 California Superbloom using NASA partner satellite data."
+      }
+    </script>
 
     <!-- Other Meta -->
     <link rel="canonical" href="https://bloomalyzer.vercel.app/">
